fix but where breaks in firefox - applied degradation

--- a/metronome.css
+++ b/metronome.css
@@ -72,7 +72,7 @@ body {
   margin-top: -6px;
   border-radius: 50%;
   border: none;
-  background-color: #60d08e;
+  background-color: #7e7e7e;
   cursor: pointer;
   box-shadow: 0px 1px 1px rgba(0,0,0,.2);
 }
